--- a/home.html
+++ b/home.html
@@ -1,1 +1,5 @@
-Dea Alvira ,umur 19
+Bakat menyanyi Raisa muncul sejak usia dini. Di usia 3 tahun, Raisa sering tampil berpura-pura seperti penyanyi sungguhan di atas panggung.[1] Musikalitas Raisa banyak terinspirasi dari musisi kenamaan Amerika Serikat seperti Brian McKnight, Alicia Keys, dan Joss Stone.
+
+Pada awal karier bernyanyinya, Raisa sempat digandeng komposer kenamaan David Foster untuk tampil di konsernya di Jakarta.[1] Pada 2008, Raisa pun pernah menjadi vokalis band bentukan Kevin Aprilio, Andante,[1] yang merupakan cikal bakal dari berdirinya band Vierratale.
+
+Raisa banyak menyanyi reguler di kafe-kafe musik. Dari kesempatan menyanyi di kafe-kafe tersebut, Raisa mendapatkan banyak peluang dalam karier bermusik.[2]
